--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <h1>Digit Recognizer</h1>
         <h2></h2>
         <a href="https://github.com/chapleau/DigitRecog" class="button"><small>View project on</small>GitHub</a>
+        test
       </div>
     </header>
 
@@ -29,7 +30,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h1>
-<a name="digit-recognizer" class="anchor" href="#digit-recognizer"><span class="octicon octicon-link"></span></a>Digit Recognizer</h1>
+<a name="digit-recognizer" class="anchor" href="#digit-recognizer"><span class="octicon octicon-link"></span></a>Understanding multiclass classifiers</h1>
 
 <p>This Digit Recognizer package provides an example of the use of supervised (machine) learning methods to classify large datasets. In the present case, the dataset consists in a large set of images representing handwritten digits (0 to 9). The goal is to be able to predict to which class (i.e. which digit) a given instance (image) belongs to. </p>
 
