--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
         <h1>Digit Recognizer</h1>
         <h2></h2>
         <a href="https://github.com/chapleau/DigitRecog" class="button"><small>View project on</small>GitHub</a>
-        test
       </div>
     </header>
 
@@ -155,6 +154,8 @@
             <small>Download</small>
             .tar.gz file
           </a>
+
+          <h2>see also: <a href="http://chapleau.github.io/simplefwk-services"><strong>Simple Framework</strong></a> </h2> 
 
           <p class="repo-owner"><a href="https://github.com/chapleau/DigitRecog"></a> is maintained by <a href="https://github.com/chapleau">chapleau</a>.</p>
 
