--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             .tar.gz file
           </a>
 
-          <h2>see also: <a href="http://chapleau.github.io/simplefwk-services"><strong>Simple Framework</strong></a> </h2> 
+          <p><h1>see also: <a href="http://chapleau.github.io/simplefwk-services"><strong>Simple Framework</strong></a> </h1> </p>
 
           <p class="repo-owner"><a href="https://github.com/chapleau/DigitRecog"></a> is maintained by <a href="https://github.com/chapleau">chapleau</a>.</p>
 
