--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 <li>
 <code>simplefwk-services</code> <a href="http://chapleau.github.io/simplefwk-services">package</a></li>
 <li>
-<code>simplefwk-utilitytoolsinterfaces</code> <a href="http://chapleau.github.io/utilitytoolsinterfaces">package</a></li>
+<code>simplefwk-utilitytoolsinterfaces</code> <a href="http://chapleau.github.io/simplefwk-utilitytoolsinterfaces">package</a></li>
 <li>
-<code>simplefwk-utilitytools</code> <a href="http://chapleau.github.io/utilitytools">package</a></li>
+<code>simplefwk-utilitytools</code> <a href="http://chapleau.github.io/simplefwk-utilitytools">package</a></li>
 </ul><h2>
 <a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
 
